# agentic-engineering-research

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/skills/guide-book-publish/: SKILL.md
.agents/skills/publish-ai-news/: SKILL.md
.agents/skills/source-audit/: SKILL.md
.agents/skills/theme-deep-research/: SKILL.md
docs/: glossary.md  repo-map.md  research-method.md
research/01-harness-engineering/: README.md  briefing.md  open-questions.md  research-log.md  source-index.md  sources.json
research/01-harness-engineering/assets/: README.md
research/01-harness-engineering/guide/: 00-README.md  (+14 more)
research/02-hosted-open-weight-coding-llm-apis/: README.md  briefing.md  research-log.md  source-index.md  sources.json
research/03-litellm-claude-desktop-computer-use/: README.md  briefing.md  research-log.md  source-index.md  sources.json
research/04-formal-methods-coding-agents/: README.md  briefing.md  research-log.md  source-index.md  sources.json
research/05-openclaw-in-the-wild/: README.md  briefing.md  research-log.md  source-index.md  sources.json
research/06-openai-harness-engineering/: README.md  briefing.md  research-log.md  source-index.md  sources.json
research/07-july-2026-ai-catch-up/: README.md  briefing.md  design-audit.md  newspaper.css  publication-spec.md  research-log.md  source-index.md  sources.json  stories.json
scripts/: build_theme_book.py  extract_theme_articles.py  validate_research.py
tests/: test_publish_ai_news_issue.py  test_publish_ai_news_podcast_handoff.py  test_publish_ai_news_window.py
(+99 files in other folders)
